[package]
name = "rusticorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusticorn"
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.17.3", features = ["extension-module", "anyhow", "serde"] }
pyo3-asyncio = { version = "0.17", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.7.0"
log = "0.4.17"
futures-util = "0.3.25"
urlencoding = "2.1.2"
anyhow = { version = "1.0", features = [ "backtrace" ] }
tokio-rustls = { version = "0.23.4", features = ["tls12"] }
rustls = { version = "0.20", features = [ "tls12", "quic" ] }
rustls-pemfile = "1.0.1"
futures = "0.3.25"
hyper-tungstenite = "0.9"
toml = "0.5.10"
serde = { version = "1", features = ["derive"] }
once_cell = "1.17.0"
pin-project-lite = "0.2.9"
