[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rusticorn"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.1.3",
]


[tool.maturin]
python-source = "python"

[tool.pdm.dev-dependencies]
dev = [
    "fastapi>=0.88.0",
    "uvicorn>=0.20.0",
    "maturin>=0.14.5",
    "isort>=5.11.2",
    "yapf>=0.32.0",
    "patchelf>=0.17.0.0",
    "hypercorn>=0.14.3",
    "websockets>=10.4",
    "httptools>=0.5.0",
]
